# brainevent

./: .gitignore  .readthedocs.yml  BINARY_DENSE_OPTIMIZATION_REPORT.md  CLAUDE.md  CONTEXT.md  CSR_PLASTICITY_OPTIMIZATION_REPORT.md  CSR_SLICE_OPTIMIZATION_REPORT.md  CSR_YW2Y_OPTIMIZATION_REPORT.md  DENSEMM_OPTIMIZATION_REPORT.md  LICENSE  README.md  SECURITY.md  SPFLOAT_CSRMM_OPTIMIZATION_REPORT.md  SPFLOAT_CSRMV_FINAL_SUMMARY.md  SPFLOAT_CSRMV_OPTIMIZATION_REPORT.md  SPFLOAT_DENSEMM_OPTIMIZATION_REPORT.md  SPFLOAT_DENSEMV_OPTIMIZATION_REPORT.md  _coo_event_impl_test.py  benchmark_config.json  changelog.md  codecov.yml  conftest.py  mypy-baseline.txt  pyproject.toml  requirements-dev-cpu.txt  requirements-dev-gpu.txt  requirements-dev.txt  requirements-doc.txt  requirements-typecheck.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml  deploy-docs.yml
benchmark/: 0_download_suitesparse.py  10_coo_benchmark.py  10_coomv_benchmark.py  10_csr_benchmark.py  11_binary_csrmv_benchmark.py  11_event_csr_benchmark.py  12_fixedprob_benchmark.py  13_event_dense_mm_benchmark.py  13_event_dense_mv_benchmark.py  13_linear_benchmark.py  14_block_csr_benchmark.py  14_coo_pallas_benchmark.py  15_block_ell_benchmark.py  15_coomv_pallas_benchmark.py  16_jitn_gpu_sweep.py  20_COBA_2005.py  21_CUBA_2005.py  22_binary_index_dense_mv_benchmark.py  22_binary_index_dense_mv_benchmark_idx.py  22_binary_index_mv_benchmark.py  23_binary_csrmv_benchmark.py  24_coomv_benchmark.py  utils.py
benchmark/csr/: float_csrmv_benchmark.py  float_test.py  float_unroll.py  result.txt
brainevent/: __init__.py  _array.py  _array_base.py  _array_base_test.py  _array_binary.py  _array_binary_impl.py  _array_binary_index.py  _array_binary_index_extraction.py  _array_binary_test.py  _array_masked_float.py  _array_masked_float_index.py  _array_masked_float_test.py  _base_array.py  _binary_array.py  _binary_matrix_impl.py  _binary_matrix_impl_test.py  _binary_vector_impl.py  _binary_vector_impl_test.py  _block_csr.py  _block_csr_test.py  _block_ell.py  _cli.py  _cli_test.py  _compatible_import.py  _compatible_import_test.py  _config.py  _config_test.py  _coo.py  _coo_event_impl.py  _coo_event_impl_test.py  _coo_float_impl.py  _coo_float_impl_test.py  _coo_impl_binary.py  _coo_impl_binary_test.py  _coo_impl_float.py  _coo_impl_float_test.py  _coo_impl_plasticity.py  _coo_impl_plasticity_test.py  _coo_test_util.py  _csr.py  (+134 more)
brainevent/_block_csr/: __init__.py  block_csr.py
brainevent/_block_ell/: __init__.py  block_ell.py
brainevent/_coo/: __init__.py  _binary.py  _binary_test.py  _coo.py  _coo_impl_binary.py  _coo_impl_binary_test.py  _coo_impl_float.py  _coo_impl_float_test.py  _coo_impl_plasticity_test.py  _float.py  _float_test.py  _plasticity.py  _plasticity_test.py  binary.cu  binary.py  binary_coomm.cu  binary_coomv.cu  binary_test.py  coomm.cu  coomv.cu  float.cu  float.py  float_coomm.cu  float_coomv.cu  float_test.py  main.py  main_test.py  pallas_gpu_test.py  plasticity.py  plasticity_binary.cu  plasticity_binary.py  plasticity_binary_on_post.cu  plasticity_binary_on_pre.cu  plasticity_binary_test.py  plasticity_binary_update_coo_on_binary_post.cu  plasticity_binary_update_coo_on_binary_pre.cu  plasticity_with_binary.py  plasticity_with_binary_test.py  test_util.py  test_util_test.py
brainevent/_csr/: __init__.py  _binary.py  _binary_test.py  _csr.py  _csr_impl_binary.py  _csr_impl_binary_test.py  _csr_impl_float_test.py  _csr_impl_masked_float.py  _csr_impl_plasticity_test.py  _csr_test.py  _diag_add.py  _float.py  _float_test.py  _masked_float.py  _plasticity.py  _plasticity_test.py  binary.cu  binary.py  binary_csrmm.cu  binary_csrmv.cu  binary_indexed.py  binary_indexed_csrmm.cu  binary_indexed_csrmv.cu  binary_indexed_mm.py  binary_indexed_mm_test.py  binary_indexed_test.py  binary_test.py  csrmm.cu  csrmv.cu  diag_add.py  diag_add_test.py  float.cu  float.py  float_csrmm.cu  float_csrmv.cu  float_test.py  main.py  main_test.py  masked_float.py  masked_float_test.py  (+34 more)
brainevent/_dense/: __init__.py  _binary.py  _binary_index.py  _binary_test.py  _dense_impl_binary.py  _dense_impl_binary_test.py  _dense_impl_plasticity_test.py  _masked_float.py  _plasticity.py  _plasticity_test.py  binary.cu  binary.py  binary_densemm.cu  binary_densemv.cu  binary_index.py  binary_test.py  dense_refactor_test.py  indexed_binary.py  indexed_binary_test.py  masked_float.py  plasticity.py  plasticity_binary.cu  plasticity_binary.py  plasticity_binary_on_post.cu  plasticity_binary_on_pre.cu  plasticity_test.py  sparse_float.cu  sparse_float.py  sparse_float_densemm.cu  sparse_float_densemv.cu  sparse_float_test.py  spfloat_densemm.cu  spfloat_densemv.cu
brainevent/_event/: __init__.py  _array_binary.py  _array_binary_index.py  _array_masked_float.py  _array_masked_float_index.py  _binary.py  _binary_index.py  _binary_index_extraction.py  _masked_float.py  _masked_float_index.py  base.py  base_test.py  binary.py  binary_index.py  binary_index_extraction.py  binary_indexed.py  binary_indexed_extraction.py  binary_indexed_extraction_test.py  binary_indexed_test.py  binary_test.py  bitpack_binary.py  compact.cu  compact.py  compact_binary.py  compact_binary_test.py  compact_test.py  indexed_binary.py  indexed_binary_extraction.py  indexed_binary_extraction_test.py  indexed_sparse_float.py  masked_float.py  sparse_float.py  sparse_float_index.py  sparse_float_indexed.py  sparse_float_indexed_extraction_test.py  sparse_float_indexed_test.py  sparse_float_test.py
brainevent/_fcn/: __init__.py  binary.cu  (+52 more)
dev/: _event_mv_experiments.py  b.py  c.py  d.py  e.py  ell_mv_cuda.py  event_mv_experiment_v2.py  nonzeros.py  optimized_sparse_kernels.py  sparse_event_kernels.py
docs/: FQA.rst  Makefile  auto_generater.py  conf.py  index.rst
examples/: COBA_2005.py  CUBA_2005.py  benchmark_example.py  benchmark_print_examples.py  ell_mv_cuda.py  numba_cuda_callable_example.py  numba_cuda_example.py  tvm_ffi_cuda_example.py
(+435 files in other folders)
